<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvm.ui.bottomsheet.NewsBottomSheetFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/news_type"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/newsType_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/newsType_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/top_headline_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_headlinenews" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/category_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_scrollView" />

    <HorizontalScrollView
        android:id="@+id/category_scrollViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/categoryType_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/general_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/health_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/business_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/science_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/science" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sports_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sports" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/entertainment_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entertainment" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/language_tV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/country"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsType_scrollView" />

    <HorizontalScrollView
        android:id="@+id/language_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_tV">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/countryType_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/us_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/us" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/jp_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/at_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/at" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gb_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gb" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/hk_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hk" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ru_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ru" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_scrollViews"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>